ArgoCD-voting app/voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 20.219.206.176.nip.io   # 👈 for testing, replace with your domain later
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 8080
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 8081
